--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <h4><i>FRONT END NINJA</h4></P>
         </div>
     <div id=container1>
+      <img src="lakme.jpg" alt="lakme">
+
     </div>
     </body>
     </html>
