--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1><b>MAREESWARI LAKSHMI</h1></p>
       <h4><i>FRONT END NINJA</h4></P>
         </div>
-    <div id=container1>
+    <div class=container1>
        </div>
     </body>
     </html>
