--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div id=container>
+    <div class=container>
       <h1><b>MAREESWARI LAKSHMI</h1></p>
       <h4><i>FRONT END NINJA</h4></P>
         </div>
